# clanker

./: .dockerignore  .gitignore  404.html  AGENTS.md  CHANGELOG.md  CODE_REVIEW_GUIDE.md  Dockerfile  FUTURE_WORK.md  HISTORY.md  Makefile  PLAN.md  README.md  VOICE_IMPROVEMENTS.md  codex_patch.patch  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  sitemap.xml  sqlc.yaml
.claude/skills/clanker/: SKILL.md
.github/workflows/: publish.yml
AGENTS/: index.html
ARCHITECTURE/: index.html
CONTRIBUTING/: index.html
FUTURE_WORK/: index.html
QUICKSTART/: index.html
agent_docs/: architecture.md  gepa-skill-generation.md  providers.md  testing.md  voice-pipeline.md
ai-docs/: 2025-12-21_exec-plan-v1.md  2025-12-21_exec-plan-v2.md  2025-12-22_codex-clanker-repo-review.md  feedback-persistence-spec.md
audio-capture/: index.html
config_schema/: index.html
container-setup/: index.html
discordpy_notes/: index.html
docker/: DEPLOYMENT.md  Dockerfile  Dockerfile.prod  README.md  docker-compose.prod.yml  docker-compose.yml  template.env
docs/: AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  FUTURE_WORK.md  QUICKSTART.md  audio-capture.md  config_schema.md  container-setup.md  discordpy_notes.md  index.md  meme-pipeline.md  transcript-examples.md  voice-debugging.md  voice-disconnect-investigation.md  voice_ingest_pipeline.md
docs/reference/: api.md
examples/: README.md  cli_tool.py  client_example.py  web_api.py  whatsapp_bot.py
meme-pipeline/: index.html
reference/api/: index.html
scratch/: BUG_FIX_PLAN.md  discordpy_slash_command_spike.py  dpytest_spike_test.py  learning_log.md  provider_smoke_openai.py  voice_pipeline_spike.py
scripts/: analyze_voice_session.py  download_test_audio.py  fix_sqlc_placeholders.py  generate_memes.py  smoke_discord_openai.py  sync_commands.py  test_audio_pipeline.py  test_meme_pipeline.py  update_memes_examples.py  validate_registry.py
scripts/gskill/: README.md  __init__.py  evaluator.py  optimize.py  tasks.py
search/: search_index.json
src/clanker/: __init__.py  constants.py  models.py  prompting.py  respond.py
src/clanker/cli/: AGENTS.md  main.py
src/clanker/cli/commands/: chat.py  config_cmd.py  shitpost.py  transcribe.py
src/clanker/config/: __init__.py  loader.py  models.py
src/clanker/policies/: __init__.py  profanity.py
src/clanker/providers/: __init__.py  audio_utils.py  base.py  elevenlabs_tts.py  errors.py  factory.py  feedback.py  image.py  llm.py  memegen.py  openai_llm.py  openai_stt.py  policy.py  stt.py  tts.py
src/clanker/providers/anthropic/: __init__.py  llm.py
src/clanker/providers/elevenlabs/: __init__.py  tts.py
src/clanker/providers/memegen/: __init__.py  image.py
src/clanker/providers/openai/: __init__.py  llm.py  stt.py
src/clanker/shitposts/: __init__.py  api.py  meme_instance_args.json  memes.py  models.py  templates.yaml
src/clanker/shitposts/prompts/: shitpost_meme_examples.yaml  shitpost_meme_generation.yaml  shitpost_meme_json_extraction.yaml
src/clanker/voice/: AGENTS.md  __init__.py  chunker.py  formats.py  vad.py  worker.py
src/clanker/voice/debug/: __init__.py  capture.py  models.py
src/clanker_bot/: AGENTS.md  __init__.py  admin.py  commands.py  discord_adapter.py  health.py  logging_config.py  main.py  metrics.py  voice_actor.py  voice_ingest.py  voice_resilience.py
src/clanker_bot/cogs/: __init__.py  vc_monitor.py
src/clanker_bot/command_handlers/: __init__.py  admin.py  chat.py  common.py  messages.py  thread_chat.py  transcript.py  types.py  voice.py
src/clanker_bot/persistence/: README.md  __init__.py  connection.py  sql_feedback.py
src/clanker_bot/persistence/db/: schema.sql
src/clanker_bot/persistence/db/queries/: interactions.sql  user_prefs.sql
src/clanker_bot/views/: __init__.py  shitpost_preview.py
src/clanker_cli/: AGENTS.md  __init__.py  main.py  output.py
src/clanker_cli/commands/: chat.py  config_cmd.py  shitpost.py  transcribe.py
tests/: conftest.py  fakes.py  meme_scoring.py  metrics.py  test_admin_commands.py  test_anthropic_adapter.py  test_anthropic_llm.py  test_audio_e2e.py  test_audio_formats.py  test_audio_scenarios.py  test_audio_utils.py  test_commands.py  test_config.py  test_debug_capture.py  test_docs_setup.py  test_dpytest_commands.py  test_feedback_models.py  test_feedback_protocol.py  test_health.py  test_logging.py  test_meme_pipeline.py  test_memegen_adapter.py  test_message_chunking.py  test_models.py  test_openai_adapters.py  test_policy.py  test_provider_factory.py  test_real_audio.py  test_respond.py  test_sanity.py  test_shitpost_preview_view.py  test_shitposts.py  test_sql_feedback.py  test_thread_chat.py  test_transcript_command.py  test_vc_monitor.py  test_voice_actor.py  test_voice_chunker.py  test_voice_ingest.py  test_voice_resilience.py  (+2 more)
tests/cli/: test_commands.py  test_e2e.py
tests/data/: README.md  generate_samples.py  sample1_monologue.pcm  sample2_paused.pcm  sample3_multispeaker.pcm
tests/data/ami/: metadata.json
tests/data/librispeech/: metadata.json
tests/data/tests/data/: generate_samples.py  metadata.json  sample1_monologue.pcm  sample2_paused.pcm  sample3_multispeaker.pcm
tests/network/: test_anthropic_smoke.py  test_memegen_smoke.py  test_openai_smoke.py
transcript-examples/: index.html
voice-debugging/: index.html
voice_ingest_pipeline/: index.html
